package com.example.oulearning.training.domain;

@FunctionalInterface
public interface IdGenerator {
    long generate();
}
